# BSUComputerGraphicsLabs

./: .gitignore  .gitmodules
Lab1/: CMakeLists.txt  README.md  clickablelabel.cpp  clickablelabel.h  labcolor.cpp  labcolor.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rgbcolor.cpp  rgbcolor.h  utils.cpp  utils.h  xyzcolor.cpp  xyzcolor.h
Lab2/: README.md
Lab2/Lab2/: Lab2.csproj  Program.cs  ResultForm.Designer.cs  ResultForm.cs
Lab2/Lab2/Properties/: AssemblyInfo.cs
Lab3/: README.md
Lab3/Lab3/: HistogramModificators.cs  Lab3.csproj  MainForm.Designer.cs  MainForm.cs  MainForm.resx  PerElementModificators.cs
Lab3/Lab3/Properties/: AssemblyInfo.cs
Lab4/: README.md
Lab4/Lab4/: Lab4.csproj  MainForm.Designer.cs  MainForm.cs  MainForm.resx
Lab5/: README.md
Lab5/Lab5/: Drawer.cs  MainForm.cs
Lab6/: AbstractCamera.cpp  AbstractCamera.hpp  AbstractGeometry.cpp  AbstractGeometry.hpp  AbstractMaterial.cpp  AbstractMaterial.hpp  CMakeLists.txt  Constants.cpp  Constants.hpp  DiffuseColorMaterial.cpp  DiffuseColorMaterial.hpp  Drawable.cpp  Drawable.hpp  EmptyMaterial.cpp  EmptyMaterial.hpp  Geometry.cpp  Geometry.hpp  Main.cpp  Models.cpp  Models.hpp  OrthographicCamera.cpp  OrthographicCamera.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp  PositionedObject.cpp  PositionedObject.hpp  README.md  Shader.cpp  Shader.hpp  SimpleGeometry.cpp  SimpleGeometry.hpp  Vertex.cpp  Vertex.hpp
